# http_server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
examples/: hello_world.cpp
include/http/: HttpParser.h  HttpRequest.h  HttpResponse.h  Router.h
include/server/: PlatformSocket.h  Server.h
src/http/: HttpParser.cpp
src/platform/: Socket_posix.cpp  Socket_win.cpp
src/server/: Server.cpp
